Adding a rect to fill out all information in the site, adding shadow, added multiple topics, extended the width of the page, added a background color to the text, and I also rounded the boxes.
TO DO: write about the accomplishments of chandra gupta I

--- a/index.html
+++ b/index.html
@@ -9,18 +9,31 @@
 </head>
 
 <body>
-  <h1 id ="header1">Chandra Gupta I</h1>
+  <h1 style="text-align: center; id="header1">Chandra Gupta I</h1>
   <div class="part1">
-    <h2>Who was Chandra Gupta I?</h2>
+    <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
     <p>
     <span class="CG1">Chandra Gupta I</span> ruled India from around 320 to about 330 CE and founded the Gupta empire. He came from a family of rulers, with his grandfather being Sri Gupta. Chandra Gupta I rose to power in Magadha, in what is now Bihar, by marrying Princess Kumaradevi of the Licchavi tribe around 308 CE. This marriage expanded his influence over parts of northern Bihar and possibly Nepal. By the late 3rd century CE, India was made up of many independent states, including the Guptas and Licchavis. Their union strengthened the new kingdom's power and prestige, symbolized by special gold coins featuring both royal families.
 </p>
-    <h2>What were the impacts of his ruling?</h2>
-    <p>Due to his ruling of the Gupta Empire, many things were made. The things that were made were:</p>
+    <h2 style="text-align: center;">What were the impacts of his ruling?</h2>
+    <p class="question">Due to his ruling of the Gupta Empire, many things were made. The things that were made were:</p>
 
-    <h3>Mathematics</h3>
+    <h3 style="text-align: center;" >Mathematics</h3>
     <p>
     During India's Golden Age, significant advancements were made, notably in the decimal system notation, reaching its peak. Interestingly, during the Gupta period, there was no symbol for zero, but mathematician Aryabhata cleverly used null coefficients within powers of ten to represent it. The Guptas employed alphabetical letters for numbers. Aryabhata's methods, including his use of zero, facilitated precise calculations like determining surface diameters. Trigonometry also emerged, introducing techniques for calculating triangle areas and concepts like sine to Gupta scholars. Additionally, new problem-solving techniques, including those for Diophantine equations and Aryabhata's algorithm, were developed, encompassing algebra and geometry.</p>
+    <h3 style="text-align: center;">Astronomy</h3>
+    <p>
+    During the Gupta period, astronomers were acquainted with gravity, with Aryabhata making notable contributions. He postulated the Earth's spherical shape and its daily rotation, contrary to the previous belief in a flat Earth. Aryabhata also proposed that the stars' motion was due to the Earth's rotation, challenging the notion of a rotating sky. He further suggested an elliptical Earth orbit, calculating a revolution around the sun taking approximately 365 days. Aryabhata's scientific insights extended to explaining solar and lunar eclipses, stating that a lunar eclipse occurs when the moon enters Earth's shadow.</p>
+      <h3>Medicene</h3>
+    <p>In the vibrant epoch of the Gupta period, the utilization of mercury and iron in medical treatments reveals a sophisticated understanding of chemical principles among its inhabitants. This demonstrates a remarkable level of insight into the properties and potentials of various substances for healing purposes. Furthermore, physicians of this era were not only versed in theoretical knowledge but also skilled in the practical application of surgical techniques. Their adeptness in performing operations underscores the depth of medical expertise that flourished during this period of history.
+</p>
+    <h3>Literature</h3>
+    <p>
+    During the Gupta Dynasty, literature soared to new heights, focusing mainly on poetry and romantic comedies that explored human behavior rather than religious themes. Sanskrit literature, supported by rulers like Chandragupta II, thrived with renowned poets such as Kalidasa. Prakrit literature, exemplified by works like the Paumacariyam, also flourished. This period also saw the finalization of Vedic Puranas, including the popular Markandeya Purana, reflecting the widespread worship of goddess Durga.</p>
+    <h3>Education</h3>
+    <p>Education was pivotal during the Gupta period, ensuring that primary schooling was accessible to all, while advanced learning necessitated residence in designated locales. Notably, women were granted the opportunity for education, a progressive aspect of Gupta society. Across major cities, numerous educational institutions and universities flourished. Among these, Takshashila University, tracing its origins back to 700 BCE, and Nalanda University, founded in the 5th century under Kumaragupta I's patronage, stood out. Renowned for their exceptional educational standards, these institutions attracted scholars from distant lands such as China and Persia, underscoring their esteemed reputation as centers of learning and intellectual exchange.</p>
+    <h3>Education</h3>
+    <p>The Gupta Empire's administration was structured into various divisions like Rajya, Rashtra, Desha, and Mandala, indicating a decentralized power system. This administrative setup facilitated systematic control over territories, with provinces further divided into numerous districts known as Vishayas, each overseen by a Visayapati and their council. Management of village welfare fell under rural bodies led by village headmen and elders, while trading centers were governed by guild merchants. The empire engaged in trade with countries such as China, Ceylon, Europe, and East Indian islands, showcasing its expansive commercial activities.</p>
   </div>
   <script src="script.js"></script>
 </body>
