--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <h1 style="text-align: center; id="header1">Chandra Gupta I</h1>
   <div class="part1">
     <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
+    <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" alt="Artwork of Chandra Gupta I">
+    <br>
     <p>
     <span class="CG1">Chandra Gupta I</span> ruled India from around 320 to about 330 CE and founded the Gupta empire. He came from a family of rulers, with his grandfather being Sri Gupta. Chandra Gupta I rose to power in Magadha, in what is now Bihar, by marrying Princess Kumaradevi of the Licchavi tribe around 308 CE. This marriage expanded his influence over parts of northern Bihar and possibly Nepal. By the late 3rd century CE, India was made up of many independent states, including the Guptas and Licchavis. Their union strengthened the new kingdom's power and prestige, symbolized by special gold coins featuring both royal families.
 </p>
@@ -34,6 +36,12 @@
     <p>Education was pivotal during the Gupta period, ensuring that primary schooling was accessible to all, while advanced learning necessitated residence in designated locales. Notably, women were granted the opportunity for education, a progressive aspect of Gupta society. Across major cities, numerous educational institutions and universities flourished. Among these, Takshashila University, tracing its origins back to 700 BCE, and Nalanda University, founded in the 5th century under Kumaragupta I's patronage, stood out. Renowned for their exceptional educational standards, these institutions attracted scholars from distant lands such as China and Persia, underscoring their esteemed reputation as centers of learning and intellectual exchange.</p>
     <h3>Education</h3>
     <p>The Gupta Empire's administration was structured into various divisions like Rajya, Rashtra, Desha, and Mandala, indicating a decentralized power system. This administrative setup facilitated systematic control over territories, with provinces further divided into numerous districts known as Vishayas, each overseen by a Visayapati and their council. Management of village welfare fell under rural bodies led by village headmen and elders, while trading centers were governed by guild merchants. The empire engaged in trade with countries such as China, Ceylon, Europe, and East Indian islands, showcasing its expansive commercial activities.</p>
+    <h3>Judicial System</h3>
+    <p>
+    The Gupta Empire maintained a distinct judicial system, wherein disputes were settled at the lowest level by either the village assembly or trade guild. At the pinnacle was the King, who presided over the highest court of appeal, aided by judges, ministers, and priests. Decisions were made based on legal texts, prevailing social customs, or the King's decree, with punishments for offenders often being mild, reflecting the lenient approach of the time.</p>
+    <h3>Art and Architecture</h3>
+    <p>
+    The Gupta period is widely hailed as a golden age of artistic achievement in North India, particularly within diverse religious spheres. While historical records indicate a flourishing of painting, the surviving artistic relics predominantly comprise religious sculptures. Notably, this era witnessed the emergence of intricately carved stone deities that became iconic in Hindu artistry, alongside the exquisite Buddha figures and revered Jain tirthankara representations. These sculptural masterpieces not only exemplify the artistic prowess of the time but also symbolize the profound spiritual and cultural significance imbued within Gupta art.</p>
   </div>
   <script src="script.js"></script>
 </body>
