Small update (added nav bar, added math.html to put history about math in)
TODO: fix it all up to be ready for presentation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
 </head>
 
 <body>
+  <nav>
+  <ul>
+  <li><a href="index.html">Home</a></li>
+  <li>
+    <a href="#">Accomplishments</a>
+    <ul class="submenu">
+      <li><a href="Math.html">Mathematics</a></li>
+      <li><a href="#">Astronomy</a></li>
+      <li><a href="#">Medicene</a></li>
+      <li><a href="#">Literature</a></li>
+      <li><a href="#">Education</a></li>
+      <li><a href="#">Judicial System</a></li>
+      <li><a href="#">Arts</a></li>
+    </ul>
+  </li>
+    </nav>
   <h1 style="text-align: center; id="header1">Chandra Gupta I</h1>
   <div class="part1">
     <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
@@ -34,8 +50,6 @@
     During the Gupta Dynasty, literature soared to new heights, focusing mainly on poetry and romantic comedies that explored human behavior rather than religious themes. Sanskrit literature, supported by rulers like Chandragupta II, thrived with renowned poets such as Kalidasa. Prakrit literature, exemplified by works like the Paumacariyam, also flourished. This period also saw the finalization of Vedic Puranas, including the popular Markandeya Purana, reflecting the widespread worship of goddess Durga.</p>
     <h3>Education</h3>
     <p>Education was pivotal during the Gupta period, ensuring that primary schooling was accessible to all, while advanced learning necessitated residence in designated locales. Notably, women were granted the opportunity for education, a progressive aspect of Gupta society. Across major cities, numerous educational institutions and universities flourished. Among these, Takshashila University, tracing its origins back to 700 BCE, and Nalanda University, founded in the 5th century under Kumaragupta I's patronage, stood out. Renowned for their exceptional educational standards, these institutions attracted scholars from distant lands such as China and Persia, underscoring their esteemed reputation as centers of learning and intellectual exchange.</p>
-    <h3>Education</h3>
-    <p>The Gupta Empire's administration was structured into various divisions like Rajya, Rashtra, Desha, and Mandala, indicating a decentralized power system. This administrative setup facilitated systematic control over territories, with provinces further divided into numerous districts known as Vishayas, each overseen by a Visayapati and their council. Management of village welfare fell under rural bodies led by village headmen and elders, while trading centers were governed by guild merchants. The empire engaged in trade with countries such as China, Ceylon, Europe, and East Indian islands, showcasing its expansive commercial activities.</p>
     <h3>Judicial System</h3>
     <p>
     The Gupta Empire maintained a distinct judicial system, wherein disputes were settled at the lowest level by either the village assembly or trade guild. At the pinnacle was the King, who presided over the highest court of appeal, aided by judges, ministers, and priests. Decisions were made based on legal texts, prevailing social customs, or the King's decree, with punishments for offenders often being mild, reflecting the lenient approach of the time.</p>
