Added new pages (math, arts, astronomy, education, js, literature, and medicene
rewrite all work

--- a/Math.html
+++ b/Math.html
@@ -6,6 +6,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    
+    <h3 style="text-align: center;" >Mathematics</h3>
+    <p>
+    During India's Golden Age, significant advancements were made, notably in the decimal system notation, reaching its peak. Interestingly, during the Gupta period, there was no symbol for zero, but mathematician Aryabhata cleverly used null coefficients within powers of ten to represent it. The Guptas employed alphabetical letters for numbers. Aryabhata's methods, including his use of zero, facilitated precise calculations like determining surface diameters. Trigonometry also emerged, introducing techniques for calculating triangle areas and concepts like sine to Gupta scholars. Additionally, new problem-solving techniques, including those for Diophantine equations and Aryabhata's algorithm, were developed, encompassing algebra and geometry.</p>
   </body>
 </html>
