--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <a href="#">Accomplishments</a>
     <ul class="submenu">
       <li><a href="Math.html">Mathematics</a></li>
-      <li><a href="#">Astronomy</a></li>
-      <li><a href="#">Medicene</a></li>
-      <li><a href="#">Literature</a></li>
-      <li><a href="#">Education</a></li>
-      <li><a href="#">Judicial System</a></li>
-      <li><a href="#">Arts</a></li>
+      <li><a href="Astronomy.html">Astronomy</a></li>
+      <li><a href="Medicene.html">Medicene</a></li>
+      <li><a href="Literature.html">Literature</a></li>
+      <li><a href="Education.html">Education</a></li>
+      <li><a href="JS.html">Judicial System</a></li>
+      <li><a href="Arts.html">Arts</a></li>
     </ul>
   </li>
     </nav>
@@ -34,11 +34,8 @@
     <span class="CG1">Chandra Gupta I</span> ruled India from around 320 to about 330 CE and founded the Gupta empire. He came from a family of rulers, with his grandfather being Sri Gupta. Chandra Gupta I rose to power in Magadha, in what is now Bihar, by marrying Princess Kumaradevi of the Licchavi tribe around 308 CE. This marriage expanded his influence over parts of northern Bihar and possibly Nepal. By the late 3rd century CE, India was made up of many independent states, including the Guptas and Licchavis. Their union strengthened the new kingdom's power and prestige, symbolized by special gold coins featuring both royal families.
 </p>
     <h2 style="text-align: center;">What were the impacts of his ruling?</h2>
-    <p class="question">Due to his ruling of the Gupta Empire, many things were made. The things that were made were:</p>
+    <p class="question">Due to his ruling of the Gupta Empire, many things were made. You can read about them by clicking through the Accomplishments section on the navagation bar!</p>
 
-    <h3 style="text-align: center;" >Mathematics</h3>
-    <p>
-    During India's Golden Age, significant advancements were made, notably in the decimal system notation, reaching its peak. Interestingly, during the Gupta period, there was no symbol for zero, but mathematician Aryabhata cleverly used null coefficients within powers of ten to represent it. The Guptas employed alphabetical letters for numbers. Aryabhata's methods, including his use of zero, facilitated precise calculations like determining surface diameters. Trigonometry also emerged, introducing techniques for calculating triangle areas and concepts like sine to Gupta scholars. Additionally, new problem-solving techniques, including those for Diophantine equations and Aryabhata's algorithm, were developed, encompassing algebra and geometry.</p>
     <h3 style="text-align: center;">Astronomy</h3>
     <p>
     During the Gupta period, astronomers were acquainted with gravity, with Aryabhata making notable contributions. He postulated the Earth's spherical shape and its daily rotation, contrary to the previous belief in a flat Earth. Aryabhata also proposed that the stars' motion was due to the Earth's rotation, challenging the notion of a rotating sky. He further suggested an elliptical Earth orbit, calculating a revolution around the sun taking approximately 365 days. Aryabhata's scientific insights extended to explaining solar and lunar eclipses, stating that a lunar eclipse occurs when the moon enters Earth's shadow.</p>
@@ -57,6 +54,7 @@
     <p>
     The Gupta period is widely hailed as a golden age of artistic achievement in North India, particularly within diverse religious spheres. While historical records indicate a flourishing of painting, the surviving artistic relics predominantly comprise religious sculptures. Notably, this era witnessed the emergence of intricately carved stone deities that became iconic in Hindu artistry, alongside the exquisite Buddha figures and revered Jain tirthankara representations. These sculptural masterpieces not only exemplify the artistic prowess of the time but also symbolize the profound spiritual and cultural significance imbued within Gupta art.</p>
   </div>
+  
   <script src="script.js"></script>
 </body>
 
