Edited the title of one of the navbar elements
small commit for the github stuff

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <ul>
   <li><a href="index.html">Home</a></li>
   <li>
-    <a href="#">Accomplishments</a>
+    <a href="#">Accomplishments of the Gupta Empire</a>
     <ul class="submenu">
       <li><a href="Math.html">Mathematics</a></li>
       <li><a href="Astronomy.html">Astronomy</a></li>
