--- a/Literature.html
+++ b/Literature.html
@@ -6,6 +6,29 @@
     <title>Literature | Gupta Empire</title>
   </head>
   <body>
-    
+    <nav>
+      <ul>
+      <li><a href="index.html">Home</a></li>
+      <li>
+        <a href="#">Accomplishments of the Gupta Empire</a>
+        <ul class="submenu">
+          <li><a href="Math.html">Mathematics</a></li>
+          <li><a href="Astronomy.html">Astronomy</a></li>
+          <li><a href="Medicene.html">Medicene</a></li>
+          <li><a href="Literature.html">Literature</a></li>
+          <li><a href="Education.html">Education</a></li>
+          <li><a href="JS.html">Judicial System</a></li>
+          <li><a href="Arts.html">Arts</a></li>
+        </ul>
+      </li>
+        </nav>
+    <h2>What was worked on?</h2>
+    <p>
+    During the Gupta Dynasty, literature reached great heights, mainly focusing on poetry and romantic comedies that explored human behavior rather than religious themes. Supported by rulers like Chandragupta II, Sanskrit literature flourished with famous poets such as Kalidasa. Prakrit literature, shown through works like the Paumacariyam, also did well. This period also saw the completion of Vedic Puranas, including the well-liked Markandeya Purana, reflecting the widespread worship of goddess Durga.</p>
+    <h2>Advancements of Literature in the Gupta Empire</h2>
+    <p>Additionally, during the Gupta Dynasty, Prakrit literature thrived, showcasing the cultural richness of the era. Masterpieces like the Paumacariyam captivated audiences with their intricate depiction of life and society. Furthermore, this period marked significant progress in consolidating Vedic Puranas, with works like the Markandeya Purana gaining widespread acclaim. These texts, rich in mythology and lore, mirrored the prevalent religious beliefs of the time, with the worship of deities such as goddess Durga holding a prominent position in the spiritual beliefs of the people.</p>
+
+    <h2>Conclusion</h2>
+    <p>Essentially, the Gupta Dynasty shines as a symbol of literary brilliance, fostering a flourishing of creativity that surpassed religious boundaries to delve into the intricacies of human existence. This era wasn't just about entertainment but also about enriching the cultural fabric of ancient India, leaving a lasting impact on future generations.</p>
   </body>
 </html>
