Finished the information based off of astronomy

--- a/Astronomy.html
+++ b/Astronomy.html
@@ -27,5 +27,9 @@
     <p>During the time of the Gupta dynasty, astronomy saw big changes thanks to Aryabhata. He came up with new ideas that challenged old beliefs and changed how we understand space. Aryabhata's ideas about how things move in space laid the groundwork for modern astronomy. He said the Earth is round and spins every day, going against the idea that it's flat. This gave us a new way to think about where we are in the universe.</p>
     <h2>Ideas about Planets</h2>
     <p>Aryabhata changed how we think about how planets move. He said the Earth goes around the sun in a stretched-out circle and takes about 365 days to do it. This was different from the old idea that the Earth doesn't move and is at the center of everything. He also said that the stars seem to move because the Earth spins. This changed how we understand how things work in space and set the stage for future discoveries.</p>
+    <h2>Ideas of Solar and Lunar Eclipses</h2>
+    <p>Additionally, Aryabhata had a good understanding of solar and lunar eclipses. He explained how a lunar eclipse happens when the moon enters Earth's shadow, showing his precise observations and calculations. This improved our understanding of these celestial events and showcased his exceptional scientific abilities. Aryabhata's long-lasting influence in astronomy proves his remarkable scientific expertise and enduring impact on our knowledge of the universe.</p>
+    <h2>Impacts of Ayrabhata's work</h2>
+    <p>In conclusion, Aryabhata's work during the Gupta period advanced astronomy significantly. His new ideas about gravity, planetary motion, and celestial events changed our understanding of the universe. By questioning old beliefs and proposing new theories, Aryabhata became one of the most important astronomers in history, leaving a lasting impact on our understanding of celestial mechanics and influencing astronomical progress for centuries.</p>
   </body>
 </html>
