fixed the titles
couldve been avoided if i didnt copy and paste my own code xd

--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
     <p>
     <span class="CG1">Chandra Gupta I</span> ruled India from around 320 to about 330 CE and founded the Gupta empire. He came from a family of rulers, with his grandfather being Sri Gupta. Chandra Gupta I rose to power in Magadha, in what is now Bihar, by marrying Princess Kumaradevi of the Licchavi tribe around 308 CE. This marriage expanded his influence over parts of northern Bihar and possibly Nepal. By the late 3rd century CE, India was made up of many independent states, including the Guptas and Licchavis. Their union strengthened the new kingdom's power and prestige, symbolized by special gold coins featuring both royal families.
 </p>
+    <h2>Wars led by Chandra Gupta I</h2>
+    <p></p>
     <h2 style="text-align: center;">What were the impacts of his ruling?</h2>
     <p class="question">Due to his ruling of the Gupta Empire, many things were made. You can read about them by clicking through the Accomplishments section on the navagation bar!</p>
 
-    <h3>Art and Architecture</h3>
-    <p>
-    The Gupta period is widely hailed as a golden age of artistic achievement in North India, particularly within diverse religious spheres. While historical records indicate a flourishing of painting, the surviving artistic relics predominantly comprise religious sculptures. Notably, this era witnessed the emergence of intricately carved stone deities that became iconic in Hindu artistry, alongside the exquisite Buddha figures and revered Jain tirthankara representations. These sculptural masterpieces not only exemplify the artistic prowess of the time but also symbolize the profound spiritual and cultural significance imbued within Gupta art.</p>
   </div>
   
   <script src="script.js"></script>
