Finished up the main page.
add images and videos

--- a/index.html
+++ b/index.html
@@ -30,13 +30,18 @@
     <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
     <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" alt="Artwork of Chandra Gupta I">
     <br>
-    <p>
-    <span class="CG1">Chandra Gupta I</span> ruled India from around 320 to about 330 CE and founded the Gupta empire. He came from a family of rulers, with his grandfather being Sri Gupta. Chandra Gupta I rose to power in Magadha, in what is now Bihar, by marrying Princess Kumaradevi of the Licchavi tribe around 308 CE. This marriage expanded his influence over parts of northern Bihar and possibly Nepal. By the late 3rd century CE, India was made up of many independent states, including the Guptas and Licchavis. Their union strengthened the new kingdom's power and prestige, symbolized by special gold coins featuring both royal families.
-</p>
-    <h2>Wars led by Chandra Gupta I</h2>
-    <p></p>
-    <h2 style="text-align: center;">What were the impacts of his ruling?</h2>
-    <p class="question">Due to his ruling of the Gupta Empire, many things were made. You can read about them by clicking through the Accomplishments section on the navagation bar!</p>
+    <p>Chanra Gupta I was very influential to the course of Asian history. Through his work as a leader, he was able to build the Gupta Dynasty for 3 generations to come.</p>
+    <h2>How did he come into power?</h2>
+    <p>Chandra Gupta I's accession to power was facilitated by his marriage to Princess Kumaradevi from the Licchavi Kingdom. This matrimonial alliance laid the foundation for a potent empire that extended its influence throughout Asia. The union between the two families became a pivotal force in shaping the region's political landscape. The Gupta Empire solidified its dominance in the region in many ways. Chandra Gupta I's reign marked the beginning of a prosperous era for the strong empire.</p>
+    <br>
+    <h2>How was this union useful to Chandra Gupta I?</h2>
+    <p>The family union led to significant wealth through access to iron-rich mines. Using this iron, they manufactured goods for trading with neighboring civilizations. This strategic use of resources expanded their influence. As a result of this wealth, the dynasty flourished economically and politically.</p>
+    <br>
+    <h2>How was the empire in terms of military?</h2>
+    <p>Chandra Gupta I possessed a powerful army, outfitted with superior armor and weaponry. With this advantage, he extended the Gupta Empire's reach by seizing control of neighboring territories. His exceptional military acumen made it difficult for rival civilizations to resist the might of the Gupta Empire. As a result, Chandra Gupta I's conquests solidified the empire's dominance in the region. </p>
+    <br>
+    <h2>What were the achievements accomplished during Chandra Gupta I's leadership in the Gupta Empire?</h2>
+    <p>Due to his ruling of the Gupta Empire, many things were made. You can read about them by clicking through the Accomplishments section on the navagation bar!</p>
 
   </div>
   
