added a animation to every page
finish

--- a/Arts.html
+++ b/Arts.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="fade-in">
      <nav>
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -32,5 +33,6 @@
     <h2>Effects of Art on the Gupta Empire</h2>
     <p>The Gupta Empire's unique jurisprudence was instrumental in maintaining social harmony and effective governance during the Gupta period. By blending local autonomy with strong central control and adopting a lenient approach to punishment, the empire showcased its legal sophistication and judicious leadership in ancient India. The multifaceted nature of the Gupta Empire's legal system highlights its dedication to upholding justice while accommodating diverse local customs and traditions within a framework of centralized authority.
 </p>
+    </div>
   </body>
 </html>
