--- a/Astronomy.html
+++ b/Astronomy.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="fade-in">
      <nav>
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -41,5 +42,6 @@
     <h2>Impacts of Ayrabhata's work</h2>
     <p>In conclusion, Aryabhata's work during the Gupta period advanced astronomy significantly. His new ideas about gravity, planetary motion, and celestial events changed our understanding of the universe. By questioning old beliefs and proposing new theories, Aryabhata became one of the most important astronomers in history, leaving a lasting impact on our understanding of celestial mechanics and influencing astronomical progress for centuries.</p>
     <br>
+    </div>
   </body>
 </html>
