--- a/Education.html
+++ b/Education.html
@@ -6,6 +6,7 @@
     <title>Education | Gupta Empire</title>
   </head>
   <body>
+    <div class="fade-in">
      <nav>
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -31,5 +32,6 @@
     <h2>Conclusion</h2>
     <p>In summary, education was crucial in molding Gupta society, emphasizing accessibility, inclusiveness, and quality. The founding of prestigious educational centers like Takshashila and Nalanda showcased the Gupta dedication to fostering intellectual progress and cultural enhancement. By prioritizing education, the Gupta Empire not only empowered its people but also established a lasting legacy of knowledge that continues to shape and inspire future generations.</p>
     <!-- taskshashila nalanda -->
+    </div>
   </body>
 </html>
