--- a/JS.html
+++ b/JS.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="fade-in">
     <nav>
     <ul>
     <li><a href="index.html">Home</a></li>
@@ -31,5 +32,6 @@
     <p>Also, the gentle punishments showed a thoughtful view of justice, focusing on helping wrongdoers improve and making peace rather than just punishing them. This leniency reflected a caring and practical approach in the legal system at that time, which helped keep society together and stable in the empire.</p>
     <h2>The impact of the Judical System on the Gupta Empire</h2>
     <p>In conclusion, the Gupta Empire's unique legal system, which involved multiple levels of resolving conflicts and highlighted the importance of traditional laws and the king's authority, had a crucial impact on maintaining peace and leadership. The combination of local independence and strong central rule, as well as the forgiving treatment of offenders, added to the empire's lasting reputation as a time of advanced legal practices and careful leadership in ancient India.</p>
+    </div>
   </body>
 </html>
