--- a/Literature.html
+++ b/Literature.html
@@ -6,6 +6,7 @@
     <title>Literature | Gupta Empire</title>
   </head>
   <body>
+    <div class="fade-in">
     <nav>
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -30,5 +31,6 @@
 
     <h2>Conclusion</h2>
     <p>Essentially, the Gupta Dynasty shines as a symbol of literary brilliance, fostering a flourishing of creativity that surpassed religious boundaries to delve into the intricacies of human existence. This era wasn't just about entertainment but also about enriching the cultural fabric of ancient India, leaving a lasting impact on future generations.</p>
+    </div>
   </body>
 </html>
