--- a/Math.html
+++ b/Math.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="fade-in">
      <nav>
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -58,5 +59,6 @@
     <br>
     <h2>Conclusion</h2>
     <p>Essentially, India's Golden Age serves as a remarkable testament to the exceptional accomplishments in mathematics, symbolized by the unmatched contributions of the Gupta period. Ranging from the enhancement of numerical notation to the introduction of groundbreaking problem-solving methods, this period established the essential framework for contemporary mathematics, leaving behind an enduring legacy that remains a source of inspiration and influence for scholars even today.</p>
+    </div>
   </body>
 </html>
