--- a/Medicene.html
+++ b/Medicene.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div class="fade-in">
      <nav>
       <ul>
       <li><a href="index.html">Home</a></li>
@@ -35,6 +36,7 @@
     <h2>Conclusion of medicene in the Gupta Empire</h2>
     <p>In conclusion, the Gupta period stands as a testament to the remarkable advancements in medicine and healthcare that characterized this vibrant epoch. The utilization of mercury and iron in medical treatments reflects a profound understanding of chemical principles and their therapeutic applications. Moreover, the practical proficiency of Gupta-era physicians in surgical techniques underscores the depth of medical expertise that flourished during this period. Together, these accomplishments highlight the Gupta society's commitment to scientific inquiry and its enduring legacy in the annals of medical history.
 </p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
