fixed up the navbar and fixed the video

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <p>Due to his ruling of the Gupta Empire, many things were made. You can read about them by clicking through the Accomplishments section on the navagation bar!</p>
 
     <h1>Videos about Chandra Gupta I</h1>
-    <video> <source src="Chandragupta - 1 _ Gupta Dynasty _ Golden Age of Indian history _ Indian History - 14.mp4">
+    <video controls> <source src="Chandragupta - 1 _ Gupta Dynasty _ Golden Age of Indian history _ Indian History - 14.mp4">
     </video>
     <h2>Short Presentation about the Gupta Empire</h2>
   </div>
