--- a/Education.html
+++ b/Education.html
@@ -4,6 +4,8 @@
     <link href="style.css" rel="stylesheet" type="text/css">
        <meta charset="UTF-8" content="width=device-width">
     <title>Education | Gupta Empire</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
   </head>
   <body>
     <div class="fade-in">
