added a temp nav bar for all pages as part of the visual rewrite
fix the font to match with the color of the font from the navbar when seeing the sub menus

--- a/Literature.html
+++ b/Literature.html
@@ -9,21 +9,24 @@
   </head>
   <body>
     <div class="fade-in">
-    <nav>
-      <ul>
-      <li><a href="index.html">Home</a></li>
-      <li>
+      <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+         <div class="container-fluid">
+      <ul class="nav">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item">
         <a href="#">Accomplishments of the Gupta Empire</a>
         <ul class="submenu">
-          <li><a href="Math.html">Mathematics</a></li>
-          <li><a href="Astronomy.html">Astronomy</a></li>
-          <li><a href="Medicene.html">Medicene</a></li>
-          <li><a href="Literature.html">Literature</a></li>
-          <li><a href="Education.html">Education</a></li>
-          <li><a href="JS.html">Judicial System</a></li>
-          <li><a href="Arts.html">Arts</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
         </ul>
       </li>
+      </ul>
+         </div>
         </nav>
     <h2>What was worked on?</h2>
     <p>
