--- a/Astronomy.html
+++ b/Astronomy.html
@@ -10,21 +10,24 @@
   </head>
   <body>
     <div class="fade-in">
-     <nav>
-      <ul>
-      <li><a href="index.html">Home</a></li>
-      <li>
+      <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
+         <div class="container-fluid">
+      <ul class="nav">
+      <li class="nav-item"><a href="index.html">Home</a></li>
+      <li class="nav-item">
         <a href="#">Accomplishments of the Gupta Empire</a>
         <ul class="submenu">
-          <li><a href="Math.html">Mathematics</a></li>
-          <li><a href="Astronomy.html">Astronomy</a></li>
-          <li><a href="Medicene.html">Medicene</a></li>
-          <li><a href="Literature.html">Literature</a></li>
-          <li><a href="Education.html">Education</a></li>
-          <li><a href="JS.html">Judicial System</a></li>
-          <li><a href="Arts.html">Arts</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Math.html">Mathematics</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Astronomy.html">Astronomy</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Medicene.html">Medicene</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Literature.html">Literature</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Education.html">Education</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="JS.html">Judicial System</a></li>
+          <li class="nav-item"><a class="link-info link-opacity-75 navbar-brand" href="Arts.html">Arts</a></li>
         </ul>
       </li>
+      </ul>
+         </div>
         </nav>
     <h2>Advancements in Astronomy</h2>
     <p>During the time of the Gupta dynasty, astronomy saw big changes thanks to Aryabhata. He came up with new ideas that challenged old beliefs and changed how we understand space. Aryabhata's ideas about how things move in space laid the groundwork for modern astronomy. He said the Earth is round and spins every day, going against the idea that it's flat. This gave us a new way to think about where we are in the universe.</p>
