quick fix to the scroll bar bc i fucked it up by accident
pro coder

--- a/index.html
+++ b/index.html
@@ -62,15 +62,22 @@
 
     <h1>Videos about Chandra Gupta I</h1>
     <br>
-    <!-- v1 = video 1, v2 = video 2 -->
+    <!-- v1 = video 1, v2 = video 2 v3 = video 3 -->
     <div class="v1">
+      <h2>Creation of the Gupta Dynasty</h2>
     <video controls> <source src="Chandragupta - 1 _ Gupta Dynasty _ Golden Age of Indian history _ Indian History - 14.mp4">
     </video>
     </div>
     <div class="v2">
+      <h2>How the Gupta Empire came into power</h2>
    <video controls>
      <source src="videoplayback.mp4">
    </video>
+    </div>
+    <div class="v3">
+      <video controls>
+        <source src="Gupta Dynasty _ World History _ Khan Academy.mp4">
+      </video>
     </div>
     
   </div>
