--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="fade-in">
+    <div id="navbar">
   <nav data-bs-theme="dark" class="navbar bg-body-tertiary">
      <div class="container-fluid">
   <ul class="nav">
@@ -29,9 +30,10 @@
   </li>
   </ul>
      </div>
+     </div>
     </nav>
     <br>
-  <h1 style="text-align: center; id="header1">Chandra Gupta I</h1>
+  <h1  class="cgi" style="text-align: center; id="header1">Chandra Gupta I</h1>
   <div class="part1">
     <h2 style="text-align: center;">Who was Chandra Gupta I?</h2>
 
@@ -63,17 +65,18 @@
     <br>
     <!-- v1 = video 1, v2 = video 2 v3 = video 3 -->
     <div class="v1">
-      <h2>Creation of the Gupta Dynasty</h2>
+      <h2 class="v">Creation of the Gupta Dynasty</h2>
     <video controls> <source src="Chandragupta - 1 _ Gupta Dynasty _ Golden Age of Indian history _ Indian History - 14.mp4">
     </video>
     </div>
     <div class="v2">
-      <h2>How the Gupta Empire came into power</h2>
+      <h2 class="v">How the Gupta Empire came into power</h2>
    <video controls>
      <source src="videoplayback.mp4">
    </video>
     </div>
     <div class="v3">
+      <h2 class="v">Timeline of the Gupta Empire</h2>
       <video controls>
         <source src="Gupta Dynasty _ World History _ Khan Academy.mp4">
       </video>
