fixed videos, added a box around the videos, added a footer.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="card" style="width: 18rem;">
       <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" class="card-img-top" alt="Artwork of Chandra Gupta I">
       <div class="card-body">
-        <br>
-        <h5 class="card-title">Drawing of Chandra Gupta I</h5>
+    
+        <h5>Drawing of Chandra Gupta I</h5>
         <br>
         <p class="card-text">The first ruler of the Gupta Dynasty (319 to 467 CE).</p>
       </div>
@@ -64,6 +64,7 @@
     <h1>Videos about Chandra Gupta I</h1>
     <br>
     <!-- v1 = video 1, v2 = video 2 v3 = video 3 -->
+    <div class="video-container">
     <div class="v1">
       <h2 class="v">Creation of the Gupta Dynasty</h2>
     <video controls> <source src="Chandragupta - 1 _ Gupta Dynasty _ Golden Age of Indian history _ Indian History - 14.mp4">
@@ -84,6 +85,9 @@
     
   </div>
   </div>
+  </div>
+  <br>
+  <footer>Created By Henri Tarelli, for the World History Project, School located at 925 Astor Ave</footer>
   <script src="script.js"></script>
 </body>
 
