added new images
fix the fucking blank space why does this happen bro wtf

--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
 
     <div class="card" style="width: 18rem;">
       <img src="https://qph.cf2.quoracdn.net/main-qimg-7a052267f0ffa2a51746b82cd94d62f3.webp" class="card-img-top" alt="Artwork of Chandra Gupta I">
+      <img src="https://qph.cf2.quoracdn.net/main-qimg-76e85fe35ec9c7b28f71aafd7417a6c1-lq" class="img2" alt="another drawing">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f0/Territories_of_Chandragupta_I.png/220px-Territories_of_Chandragupta_I.png" class="img3">
       <div class="card-body">
     
-        <h3>Drawing of Chandra Gupta I</h3>
         <br>
         <p class="card-text">The first ruler of the Gupta Dynasty (319 to 467 CE).</p>
       </div>
     </div>
     
     <br>
-    <p>Chanra Gupta I was very influential to the course of Asian history. Through his work as a leader, he was able to build the Gupta Dynasty for 3 generations to come.</p>
+    <p>Chandra Gupta I was very influential to the course of Asian history. Through his work as a leader, he was able to build the Gupta Dynasty for 3 generations to come.</p>
     <h2>How did he come into power?</h2>
     <p>Chandra Gupta I's accession to power was facilitated by his marriage to Princess Kumaradevi from the Licchavi Kingdom. This matrimonial alliance laid the foundation for a potent empire that extended its influence throughout Asia. The union between the two families became a pivotal force in shaping the region's political landscape. The Gupta Empire solidified its dominance in the region in many ways. Chandra Gupta I's reign marked the beginning of a prosperous era for the strong empire.</p>
     <br>
